--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
             nodejs: 10.x
     pre_build:
         commands:
+            - cd src/frontend
             - npm i
     build:
         commands:
