--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,4 +15,4 @@ artifacts:
     files:
         - "**/*"
     discard-paths: no
-    base-directory: /src/frontend/build
+    base-directory: build
